fixed event image position and url overflow on mobile screen

--- a/client/src/components/Event/EventProfile/event-profile.module.css
+++ b/client/src/components/Event/EventProfile/event-profile.module.css
@@ -20,7 +20,7 @@
   font-size: 50px;
 }
 
-.img {
+.event-img {
   max-width: '80vw';
   height: '30vh';
   object-fit: 'cover';
@@ -71,8 +71,12 @@
 
 @media only screen and (max-width: 480px) {
   .main-text-inner {
-    font-size: 40px;
+    font-size: 20px;
     padding-left: 30px;
+  }
+
+  .address {
+    overflow-wrap: break-word;
   }
 }
 
@@ -80,6 +84,9 @@
   .main-text-inner {
     font-size: 50px;
     padding-left: 40px;
+  }
+  .address {
+    overflow-wrap: break-word;
   }
 }
 
